#5 apply feedback by advisor to document or include as todo add acronyms for iteration steps and feedback sample size

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -34,6 +34,8 @@
 \DeclareAcronym{text-embedding}{short=text-embedding-3,long=\texttt{text-embedding-3-large}}
 \DeclareAcronym{gpt-copilot}{short=Copilot,long=\texttt{GPT-4.1 Copilot}}
 \DeclareAcronym{AI}{short=AI, long=Artifical Intelligence}
+\DeclareAcronym{iter}{short=\ensuremath{i}, long=maximum iteration steps}
+\DeclareAcronym{feed}{short=\ensuremath{n}, long=feedback sample size}
 
 \newcommand{\ToT}[0]{\ac{ToT}\xspace}
 \newcommand{\CoT}[0]{\ac{CoT}\xspace}
@@ -63,6 +65,7 @@
 \newcommand{\AI}[0]{\ac{AI}\xspace}
 \newcommand{\fone}[0]{F\textsubscript{1}-Score\xspace}
 \newcommand{\ftwo}[0]{F\textsubscript{2}-Score\xspace}
-\newcommand{\idots}[0]{$[\dots]$}
-
+\newcommand{\idots}[0]{\ensuremath{[\dots]}}
+\newcommand{\iter}[0]{\acs{iter}\xspace}
+\newcommand{\feed}[0]{\acs{feed}\xspace}
 \newcommand{\tripplequote}[0]{\textquotesingle{}\textquotesingle{}\textquotesingle{}}
