--- a/thesis.tex
+++ b/thesis.tex
@@ -67,6 +67,7 @@
 
 %% For example texts -- please remove in the final version
 \usepackage{blindtext}
+\usepackage{algxpar}
 
 %% ====================================
 %% ====================================
@@ -76,7 +77,6 @@
 %% ====================================
 %% ====================================
 \begin{document}
-
 %% Set PDF metadata
 \setpdf
 
