--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -13,7 +13,7 @@ Last but not least, I will explain how I plan to evaluate and compare my finding
 \begin{figure}
     \centering
     \includesvg[width=\linewidth]{graphics/tree_of_thought}
-    \caption{\Ac{ToT} visualization inspired by \citewithauthor{yao2023TreeThoughts}}
+    \caption{\Ac{ToT} visualization inspired by \citewithauthor{yao2023TreeThoughts} \Todo{was bedeuten die Kästen, die Farben etc. alles erklören; auch was die Pfeile bedeuten. Das ist keine Standard-Darstellung. Was ist die Semantik? Außerdem bild erklären.}}
     \label{fig:ToT_visualization}
 \end{figure}
 
@@ -31,8 +31,9 @@ Integration for different \LLM providers, such as Chat-GPT, Ollama, and Blablado
 The new classifier can be plugged in directly with little more effort than writing the request prompt and implementing the \verb|classify| function to extract the classification result out of the \LLM output.
 
 This work package has two major goals.
+\Todo{lieber nicht über WPs reden; das ist teil von deinen untersuchungen; rede am besten einfach über den ToT classifier .}
 Foremost, to get confident and set up with the general project structure and benchmark data.
-This will be a prerequisite for all future work in the LiSSA framework.
+This will be a prerequisite for all future work in the \LiSSA framework.
 Second, this will broaden the baseline to compare later results and possible improvements against.
 
 
@@ -66,7 +67,7 @@ To limit resource usage, a hard limit will also be included to put an upper boun
 \begin{figure}
     \centering
     \includesvg[width=0.7\linewidth]{graphics/Iterative_core_loop}
-    \caption{Visualization of a simple iterative optimization algorithm}
+    \caption{Visualization of a simple iterative optimization algorithm \Todo{Legende einfügen; erklären was die Farben bedeuten etc.}}
     \label{fig:iterative_core_loop}
 \end{figure}
 
@@ -80,52 +81,10 @@ The existing iterative optimization implementation from~\Todo{fix ref phase naiv
 Refer to~\autoref{sec:gradient_descent} for details of the gradient-descent-based optimization algorithm.
 
 \citewithauthor{pryzant2023AutomaticPrompt} have provided their Python source code in a publicly accessible repository\footnote{https://github.com/microsoft/LMOps/tree/main/prompt\_optimization} under the MIT license.
-The project code can be of great help when adapting their algorithm to the LiSSA Java framework.
+The project code can be of great help when adapting their algorithm to the \LiSSA Java framework.
 The actual implementation of gradient descent and the bandit-selection algorithm will be the main focus, in order to steer optimized prompts in the right direction.
 
 The primary idea of this thesis is to explore automated optimization.
 The naive approach may yield good results already.
 Feeding more information and processing logic into the optimization system is expected to present better results.
 Especially suitable results may be reached faster by doing more processing on the machine instead of expensive API calls to the large language model.
-
-
-\section{Evaluation}
-\label{approach:sec:evaluation}
- Evaluating the experimental results of prompt optimization is central to making them accessible and comparable. 
- Precision~(\autoref{eq:precision}) and recall~(\autoref{eq:recall}) are key measures for information retrieval tasks~\cite{hayes2006AdvancingCandidate}.
- They are commonly used by many authors to compare different approaches to \TLR. 
- Further the \fone and $f2-score$, using a fixed $\beta$ in \autoref{eq:f_beta}, are used often.
-I will use these four measures.
-\citewithauthor{hey2025RequirementsTraceability} and \citewithauthor{fuchss2025LiSSAGeneric} have used these when evaluating their results on the same data sets I intend to use.
-This way comparrision will be very simple.
- 
-
-%\textit{TODO: Explain these metricize and how they are calculated instead of direct quoting and formatting formulas}
-\directQuote[sec. 7.1]{Precision measures the ratio of correctly predicted links and all predicted links. Recall measures the ratio of correctly predicted links and all relevant documents. It shows an approach’s ability to provide correct trace links. The \fone is the harmonic mean of precision and recall. The Metrics are calculated in the following way, where TP is true positives, FP is false positives, and FN is false negatives.}{ewald2024RetrievalAugmentedLarge}
-
-\begin{align}
-    \label{eq:precision}
-    Precision = \frac{TP}{TP + FP} &\\
-    \label{eq:recall}
-    Recall = \frac{TP}{TP + FN} &\\
-    \label{eq:f_beta}
-    f_{\beta} = (1 + \beta^2) \cdot \frac{Precision \cdot Recall}{(\beta^2 \cdot Precision) + Recall}
-\end{align}
-
-
-
-Depending on how long each implementation phase will take, it is possible to generate a bunch of different data and performance comparisons.
-A simple yet interesting approach is to compare different LLMs for the task.
-Many variations can be achieved by comparing, for example, how a prompt optimized by one system performs on the others.
-We can also compare how well each system manages to optimize the initial prompt.
-Another interesting thought is to take optimized prompts from a different system as the initial prompt.
-
-Varying testing data is also plausible.
-Including artifacts and their links from different projects into a singular data set might have the potential to yield more general but less optimized prompts. 
-The exact scope of the evaluation remains to be seen.
-It will be dynamically adjusted when actual implementations exist and are ready to test.
-
-
-\subsection{Datasets}
-\label{approach:sec:datasets}
-The datasets used for evaluation will be the same as in \citewithauthor{hey2025RequirementsTraceability}.
