--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -12,8 +12,11 @@
 
 \chapter{Introduction}
 \label{ch:Introduction}
-During software development, numerous artifacts are created, ranging from the actual project code to documentation and a multitude of formal and informal diagrams. \Acl{TLR} aims to link these artifacts across different domains or versions.
-Challenges such as inconsistent naming are frequent issues in software projects~\cite{wohlrab2019ImprovingConsistency}. \TLR approaches need to be able to deal with such hardships. \autoref{fig:artifact_overview} provides an overview of what these artifacts might look like.
+During software development, numerous artifacts are created, ranging from the actual project code to documentation and a multitude of formal and informal diagrams.
+\Acl{TLR} aims to link these artifacts across different domains or versions.
+Challenges such as inconsistent naming are frequent issues in software projects~\cite{wohlrab2019ImprovingConsistency}.
+\TLR approaches need to be able to deal with such hardships.
+\autoref{fig:artifact_overview} provides an overview of what these artifacts might look like.
 
 \begin{figure}
     \centering
@@ -24,6 +27,7 @@ Challenges such as inconsistent naming are frequent issues in software projects~
 
 \Aclp{LLM} have made rapid advancements in recent years.
 They are becoming increasingly popular for dealing with \TLR tasks and have shown auspicious results so far.
+\Todo{This needs proof, sowas sollte belegt werden. du redest hier über trends. LMs wurden schon davor für TLR etc. verwendet :)}
 As they are still unable to reason and think on their own~\cite{shojaee2025IllusionThinking}, prompt engineering is required to extract good results.
 However, manually determining prompts suited for each specific problem is quite a tedious, time- and labor-intensive task.
 
@@ -34,3 +38,5 @@ The LiSSA framework~\cite{fuchss2025LiSSAGeneric} proposes an environment for \T
 They rely on the power of \LLMs to extract traceability links from a variety of different artifacts, also across multiple domains.
 My work will contribute an automatic prompt refinement algorithm to this framework.
 I am expecting to improve \TLR, especially for larger projects in the requirements-to-requirements domain.
+
+\Todo{Intro sollte länger sein. Figur muss beschrieben sein. ggf beispiel einführen. Problem deutlich hervorheben}
