--- a/sections/related_work.tex
+++ b/sections/related_work.tex
@@ -5,14 +5,16 @@ On the one hand side the field of \TLR does not always rely on \LLMs as shown in
 On the other hand, \APE has a much broader application and research than simply being focused on \TLR as expanded in \autoref{related:sec:ape}.
 
 
-\section{Trace Link Recovery}
+\section{Traceability Link Recovery}
 \label{related:sec:tlr}
+%Maybe acro can be used here instead?
 
 Before the emergence of \LLMs \IR methods were used to recover \TLs.
 \citewithauthor{delucia2012InformationRetrieval} have provided an overview about different \IR methods and their performance. 
 
 More recently, in work by \citewithauthor{hey2021ImprovingTraceability}, they attempted to overcome the semantic gap, which occurs when two instances of the same artifact are described using differing semantics, by exploring word embeddings.
-\citewithauthor{keim2021TraceLink} have proposed cross-domain \TLR using agent-like machine learning algorithms. 
+\citewithauthor{keim2021TraceLink} have proposed cross-domain \TLR using agent-like machine learning algorithms.
+\Todo{?? Sicher ?? Kann mich daran nicht erinnern, ist aber auch schon etwas her.}
 
 
 
