--- a/preamble.sty
+++ b/preamble.sty
@@ -1,6 +1,5 @@
 
 \ProvidesPackage{preamble}
-
 \RequirePackage{acronyms}
 
 %custom commands
@@ -24,12 +23,19 @@
 \RequirePackage{todo}
 
 \newcommand{\citewithauthor}[1]{\citeauthor{#1}~\cite{#1}\xspace}
-\newcommand{\directQuote}[3][]{\guillemotleft#2\guillemotright~\cite[#1]{#3}\xspace}
+\newcommand{\directQuote}[3][]{\guillemotright#2\guillemotleft~\cite[#1]{#3}\xspace}
 \newcommand{\citeiterative}[0]{\cite{pryzant2023AutomaticPrompt, zadenoori2025AutomaticPrompt, zhou2023LargeLanguage, madaan2023SelfRefineIterative}\xspace}
-\newcommand{\Quote}[2][]{\guillemotleft#2\guillemotright~[#1]\xspace}
+\newcommand{\Quote}[2][]{\guillemotright#2\guillemotleft~[#1]\xspace}
 \newcommand{\eq}[0]{=}
 \newcommand{\algorithmautorefname}{Algorithm}
 
+% Adjust autoref capitalization for consistency
+\renewcommand{\sectionautorefname}{Section}
+\renewcommand{\subsectionautorefname}{Section}
+\renewcommand{\subsubsectionautorefname}{Section}
+\renewcommand{\chapterautorefname}{Chapter}
+\renewcommand{\subchapterautorefname}{Chapter}
+\renewcommand{\subsubchapterautorefname}{Chapter}
 %% Prompt Box
 \newcounter{prompt}
 \newtcbtheorem[use counter=prompt]{prompt}{Prompt}{%
