Update on Overleaf.

--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -10,10 +10,12 @@ Last but not least, I will explain how I plan to evaluate and compare my finding
 \section{Simple Tree-of-Thought Classifier}
 \label{approach:sec:tot}
 
+\autoref{fig:ToT_visualization} \Todo{was bedeuten die Kästen, die Farben etc. alles erklören; auch was die Pfeile bedeuten. Das ist keine Standard-Darstellung. Was ist die Semantik? Außerdem bild erklären.}
+
 \begin{figure}
     \centering
     \includesvg[width=\linewidth]{graphics/tree_of_thought}
-    \caption{\Ac{ToT} visualization inspired by \citewithauthor{yao2023TreeThoughts} \Todo{was bedeuten die Kästen, die Farben etc. alles erklören; auch was die Pfeile bedeuten. Das ist keine Standard-Darstellung. Was ist die Semantik? Außerdem bild erklären.}}
+    \caption{\Ac{ToT} visualization inspired by \citewithauthor{yao2023TreeThoughts}}
     \label{fig:ToT_visualization}
 \end{figure}
 
@@ -64,10 +66,12 @@ The hopefully improved prompt will be taken into the next iteration.
 The act of evaluation and improving will be repeated until a threshold value is passed, meaning the prompt is considered good enough.
 To limit resource usage, a hard limit will also be included to put an upper bound on the optimization attempts.
 
+\autoref{fig:iterative_core_loop} \Todo{Legende einfügen; erklären was die Farben bedeuten etc.}
+
 \begin{figure}
     \centering
     \includesvg[width=0.7\linewidth]{graphics/Iterative_core_loop}
-    \caption{Visualization of a simple iterative optimization algorithm \Todo{Legende einfügen; erklären was die Farben bedeuten etc.}}
+    \caption{Visualization of a simple iterative optimization algorithm}
     \label{fig:iterative_core_loop}
 \end{figure}
 
