--- a/tables/ZadenooriOptimizationPrompt.tex
+++ b/tables/ZadenooriOptimizationPrompt.tex
@@ -3,7 +3,7 @@
 
 \begin{tabularx}{\textwidth}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z }
     \toprule
-    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 2 }{c}{KISS-Original}  & \multicolumn{ 2 }{c}{feedback i=1, n=3}  & \multicolumn{ 2 }{c}{feedback i=3, n=1}  & \multicolumn{ 2 }{c}{feedback i=5, n=3}                                                                                          \\
+    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 2 }{c}{KISS-Original}  & \multicolumn{ 2 }{c}{feedback (\iter=1, \feed=3)}  & \multicolumn{ 2 }{c}{feedback (\iter=3, \feed=1)}  & \multicolumn{ 2 }{c}{feedback (\iter=5, \feed=3)}                                                                                          \\
     \cmidrule(lr){ 3-4 }
     \cmidrule(lr){ 5-6 }
     \cmidrule(lr){ 7-8 }
