--- a/tables/FeedbackOptimizer.tex
+++ b/tables/FeedbackOptimizer.tex
@@ -3,7 +3,7 @@
 
 \begin{tabularx}{\hsize}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z  Z  Z  Z  Z }
     \toprule
-    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{feedback (iter=1, n=3)}  & \multicolumn{ 3 }{c}{feedback (iter=5, n=3)}  & \multicolumn{ 3 }{c}{feedback (iter=10, n=5)}                                                                                          \\
+    \multirow{2}{1em}[-0.45em]{\rotatebox{90}{Dataset}} & \multirow{2}{*}[-0.9em]{\rotatebox{90}{Metric}}  & \multicolumn{ 3 }{c}{KISS-Original}  & \multicolumn{ 3 }{c}{feedback (\iter=1, \feed=3)}  & \multicolumn{ 3 }{c}{feedback (\iter=5, \feed=3)}  & \multicolumn{ 3 }{c}{feedback (\iter=10, \feed=5)}                                                                                          \\
     \cmidrule(lr){ 3-5 }
     \cmidrule(lr){ 6-8 }
     \cmidrule(lr){ 9-11 }
